// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Component Test Renders correctly with button click without account 1`] = `
<div>
  <nav
    class="w-full border-b border-gray-200 px-2 sm:px-4 py-2.5 bg-violet-900 sticky top-0 z-40"
  >
    <div
      class="flex flex-wrap items-center justify-between"
    >
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-4"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          href="/whitepaper"
        >
          White Paper
        </a>
        <a
          href="https://github.com/DrawNFT/DrawNFT.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          Github
        </a>
        <a
          href="https://twitter.com/DrawNFTio"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
      </span>
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-10"
      >
        <button>
          Connect Wallet
        </button>
      </span>
    </div>
  </nav>
</div>
`;

exports[`Navbar Component Test Renders correctly with withdraw payments button 1`] = `
<div>
  <nav
    class="w-full border-b border-gray-200 px-2 sm:px-4 py-2.5 bg-violet-900 sticky top-0 z-40"
  >
    <div
      class="flex flex-wrap items-center justify-between"
    >
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-4"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          href="/whitepaper"
        >
          White Paper
        </a>
        <a
          href="https://github.com/DrawNFT/DrawNFT.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          Github
        </a>
        <a
          href="https://twitter.com/DrawNFTio"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
      </span>
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-10"
      >
        <button>
          Withdraw Payments
        </button>
        <a
          href="https://opensea.io/account"
          rel="noopener noreferrer"
          target="_blank"
        >
          account
        </a>
      </span>
    </div>
  </nav>
</div>
`;

exports[`Navbar Component Test Renders correctly without env 1`] = `
<div>
  <nav
    class="w-full border-b border-gray-200 px-2 sm:px-4 py-2.5 bg-violet-900 sticky top-0 z-40"
  >
    <div
      class="flex flex-wrap items-center justify-between"
    >
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-4"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          href="/whitepaper"
        >
          White Paper
        </a>
        <a
          href="https://github.com/DrawNFT/DrawNFT.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          Github
        </a>
        <a
          href="https://twitter.com/DrawNFTio"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
      </span>
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-10"
      >
        <a
          href="https://opensea.io/account"
          rel="noopener noreferrer"
          target="_blank"
        >
          account
        </a>
      </span>
    </div>
  </nav>
</div>
`;

exports[`Navbar Component Test render with account does not match with the process 1`] = `
<div>
  <nav
    class="w-full border-b border-gray-200 px-2 sm:px-4 py-2.5 bg-violet-900 sticky top-0 z-40"
  >
    <div
      class="flex flex-wrap items-center justify-between"
    >
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-4"
      >
        <a
          href="/"
        >
          Home
        </a>
        <a
          href="/whitepaper"
        >
          White Paper
        </a>
        <a
          href="https://github.com/DrawNFT/DrawNFT.io"
          rel="noopener noreferrer"
          target="_blank"
        >
          Github
        </a>
        <a
          href="https://twitter.com/DrawNFTio"
          rel="noopener noreferrer"
          target="_blank"
        >
          Twitter
        </a>
      </span>
      <span
        class="self-center text-xl font-semibold whitespace-nowrap text-white flex gap-10"
      >
        <a
          href="https://opensea.io/account"
          rel="noopener noreferrer"
          target="_blank"
        >
          account
        </a>
      </span>
    </div>
  </nav>
</div>
`;
